ARM: dts: Add display info for Kirby
This adds basic display stuff in the device tree for Kirby. Display
works and we can see the desktop now.

Notes:
- Added "dummy" fixed regulators for vcd_led and lcd_vdd. On Kirby
  they are hardwired to always be on (not controlled by a FET). So we
  set regulator-always-on to make the driver not attempt to switch
  them on/off.
- PS8622 GPIOs updated
- Added FIMD, panel, eDP controller, and HDMI info.
- HDMI transmitter is connected to always-on LDO27

TODOs:
- We currently skip EDID read. Is this really necessary?
- We currently set the PS8622 to use PWM pass-thru mode
  (use-external-pwm) so the display gets the signal from the AP. We
  may wish to change this to use the bridge chip's internal PWM. But
  for now we do pass-thru since we can adjust the brightness smoothly.

BUG=chrome-os-partner:22458
TEST=booted on Kirby, see the UI come up, brightness keys work.
Signed-off-by: David Hendricks <dhendrix@chromium.org>

Change-Id: I7b355fbbf95d070872de3bf1191c78fc8d73da09
Reviewed-on: https://chromium-review.googlesource.com/168883
Commit-Queue: David Hendrix <dhendrix@chromium.org>
Tested-by: David Hendrix <dhendrix@chromium.org>
Reviewed-by: Ronald Minnich <rminnich@chromium.org>

--- a/arch/arm/boot/dts/exynos5420-peach-kirby.dts
+++ b/arch/arm/boot/dts/exynos5420-peach-kirby.dts
@@ -16,4 +16,9 @@
 	model = "Google Peach Kirby";
 
 	compatible = "google,kirby", "google,peach", "samsung,exynos5420";
+
+	/* FIXME: Is this really necessary? */
+	display-port-controller {
+		samsung,skip-edid-read;
+	};
 };
