kirby: Enable BQ27500 battery driver
This exposes battery information to sysfs.

BUG=chrome-os-partner:22458
TEST=Boot Kirby and check battery info in sysfs.

Change-Id: I6cb0bed52008171bd967ff3e835bf91af5f8b082
Signed-off-by: Vic Yang <victoryang@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/169514
Reviewed-by: David Hendrix <dhendrix@chromium.org>

--- a/arch/arm/boot/dts/exynos5420-peach-kirby.dtsi
+++ b/arch/arm/boot/dts/exynos5420-peach-kirby.dtsi
@@ -366,6 +366,11 @@
 				#size-cells = <0>;
 
 				google,remote-bus = <0>;
+
+				battery: bq27500@55 {
+					compatible = "ti,bq27500";
+					reg = <0x55>;
+				};
 			};
 
 			keyboard-controller {
