Revert "CHROMIUM: exynos: add "supports-hs200-mode" property to peach-pit dts"
Pit occasionally fails to boot due to not being able to detect the eMMC.
Removing hs200 support seems to fix it.

This reverts commit efad24f5ab520b598c50f40f82a06bf6307b4f0e.

BUG=chrome-os-partner:22813
TEST=Pit boots reliably (150 times and counting).  Previously it would fail
within 10-20 boots.

Change-Id: If01318a7f6b7c3423a27de0c0c388850a129ca35
Signed-off-by: Andrew Bresticker <abrestic@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/170242
Reviewed-by: Doug Anderson <dianders@chromium.org>
Tested-by: Doug Anderson <dianders@chromium.org>
Commit-Queue: Doug Anderson <dianders@chromium.org>

--- a/arch/arm/boot/dts/exynos5420-peach-pit.dtsi
+++ b/arch/arm/boot/dts/exynos5420-peach-pit.dtsi
@@ -317,8 +317,7 @@
 		num-slots = <1>;
 		broken-cd;
 		bypass-smu;
-		supports-highspeed;	/* >= 25MHz */
-		supports-hs200-mode;	/* 200MHz */
+		supports-highspeed;
 		non-removable;
 		fifo-depth = <0x40>;
 		card-detect-delay = <200>;
