--- a/arch/arm/boot/dts/exynos5250-snow-rev5.dts
+++ b/arch/arm/boot/dts/exynos5250-snow-rev5.dts
@@ -28,4 +28,30 @@
 	 */
 	compatible = "google,snow-rev5", "google,snow-any",
 		"samsung,exynos5250";
+
+	pinctrl@11400000 {
+		max98090_irq: max98090-irq {
+			samsung,pins = "gpx0-4";
+			samsung,pin-function = <0>;
+			samsung,pin-pud = <0>;
+			samsung,pin-drv = <0>;
+		};
+	};
+
+	i2c@12CD0000 {
+		max98090: codec@10 {
+			compatible = "maxim,max98090";
+			reg = <0x10>;
+			interrupts = <4 0>;
+			interrupt-parent = <&gpx0>;
+			pinctrl-names = "default";
+			pinctrl-0 = <&max98090_irq>;
+		};
+	};
+
+	sound {
+		compatible = "google,daisy-audio-max98090";
+		samsung,audio-codec = <&max98090>;
+		/* pins and clocks are defined in cros5250-common.dtsi */
+	};
 };
