--- a/arch/arm/boot/dts/exynos5250-spring.dts
+++ b/arch/arm/boot/dts/exynos5250-spring.dts
@@ -503,24 +503,24 @@
 					0x04000061 0x0401001e 0x04020020 0x04030021
 					/* S       K          J          ;       */
 					0x0404001f 0x04050025 0x04060024 0x04080027
-					/* L       ENTER      Z          C       */
-					0x04090026 0x040b001c 0x0501002c 0x0502002e
-					/* V       X          ,          M       */
-					0x0503002f 0x0504002d 0x05050033 0x05060032
-					/* L_SHIFT /          .          SPACE   */
-					0x0507002a 0x05080035 0x05090034 0x050B0039
-					/* 1       3          4          2       */
-					0x06010002 0x06020004 0x06030005 0x06040003
-					/* 8       7          0          9       */
-					0x06050009 0x06060008 0x0608000b 0x0609000a
-					/* L_ALT   DOWN       RIGHT      Q       */
-					0x060a0038 0x060b006c 0x060c006a 0x07010010
-					/* E       R          W          I       */
-					0x07020012 0x07030013 0x07040011 0x07050017
-					/* U       R_SHIFT    P          O       */
-					0x07060016 0x07070036 0x07080019 0x07090018
-					/* UP      LEFT    */
-					0x070b0067 0x070c0069>;
+					/* L       \          ENTER      Z       */
+					0x04090026 0x040a002b 0x040b001c 0x0501002c
+					/* C       V          X          ,       */
+					0x0502002e 0x0503002f 0x0504002d 0x05050033
+					/* M       L_SHIFT    /          .       */
+					0x05060032 0x0507002a 0x05080035 0x05090034
+					/* SPACE   1          3          4       */
+					0x050B0039 0x06010002 0x06020004 0x06030005
+					/* 2       8          7          0       */
+					0x06040003 0x06050009 0x06060008 0x0608000b
+					/* 9       L_ALT      DOWN       RIGHT   */
+					0x0609000a 0x060a0038 0x060b006c 0x060c006a
+					/* Q       E          R          W       */
+					0x07010010 0x07020012 0x07030013 0x07040011
+					/* I       U          R_SHIFT    P       */
+					0x07050017 0x07060016 0x07070036 0x07080019
+					/* O       UP         LEFT     */
+					0x07090018 0x070b0067 0x070c0069>;
 			};
 
 			power-regulator {
