drm: backported cirrusdrm driver from kernel-next
cirrusdrm is needed for KMS and framebuffer support in QEMU.

BUG=chromium:182119
TEST=enable DRM_CIRRUS_QEMU in kernel, run chrome is in QEMU with fbdev driver

Change-Id: I76cfb1250bc771d0ca86e3c08c893c82352338f0
Signed-off-by: Dominik Behr <dbehr@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/171011
Reviewed-by: Stéphane Marchesin <marcheu@chromium.org>

--- a/drivers/gpu/drm/Makefile
+++ b/drivers/gpu/drm/Makefile
@@ -42,5 +42,6 @@ obj-$(CONFIG_DRM_NOUVEAU) +=nouveau/
 obj-$(CONFIG_DRM_EXYNOS) +=exynos/
 obj-$(CONFIG_DRM_GMA500) += gma500/
 obj-$(CONFIG_DRM_UDL) += udl/
+obj-$(CONFIG_DRM_CIRRUS_QEMU) += cirrus/
 obj-y			+= i2c/
 obj-y			+= bridge/
