CHROMIUM: enable Cirrus Logic QEMU fb drm driver for x86/x64
This change enables recently added Cirrus Logic QEMU fb drm driver for
x86/x64 kernels. This driver is needed to replace vesa X11 driver
which needs root privileges and direct hardware accessw with fbdev
that does not need them.

BUG=CHROMIUM:182119
TEST=build and run Chrome OS for alex on hw and VM

Change-Id: I8df0183b630d65189be3dad5929c6292acf4e700
Signed-off-by: Dominik Behr <dbehr@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/171250
Reviewed-by: Stéphane Marchesin <marcheu@chromium.org>

--- a/chromeos/config/armel/common.config
+++ b/chromeos/config/armel/common.config
@@ -148,6 +148,9 @@ CONFIG_ENABLE_WARN_DEPRECATED=y
 # CONFIG_ENC28J60 is not set
 CONFIG_EXTRA_FIRMWARE=""
 # CONFIG_FB_BACKLIGHT is not set
+# CONFIG_FB_SYS_COPYAREA is not set
+# CONFIG_FB_SYS_FILLRECT is not set
+# CONFIG_FB_SYS_IMAGEBLIT is not set
 CONFIG_FORCE_MAX_ZONEORDER=11
 CONFIG_FRAME_WARN=1024
 # CONFIG_FTGMAC100 is not set
