ARM: dts: Add a name for the sound card in snow-rev5
Giving the sound card a name will help userspace figure out which card
is present and apply different settings.

BUG=chrome-os-partner:23015
TEST=With all changes (+adhd change) -rev4 and -rev5 work for:
- youtube (speakers and headphones)
- aplay (speakers and headphones)
- google voice search w/ builtin mic

Conflicts:
	arch/arm/boot/dts/exynos5250-snow-rev5.dts

Change-Id: Ib0636a11a1085005cdf3e74306d5445ce0e176fe
Signed-off-by: Doug Anderson <dianders@chromium.org>
Previously-Reviewed-on: https://chromium-review.googlesource.com/171365
Reviewed-on: https://chromium-review.googlesource.com/171524
Reviewed-by: Dylan Reid <dgreid@chromium.org>

--- a/arch/arm/boot/dts/exynos5250-snow-rev5.dts
+++ b/arch/arm/boot/dts/exynos5250-snow-rev5.dts
@@ -51,6 +51,7 @@
 
 	sound {
 		compatible = "google,daisy-audio-max98090";
+		card-name = "DAISY-I2S-98090";
 		samsung,audio-codec = <&max98090>;
 		/* pins and clocks are defined in cros5250-common.dtsi */
 	};
