--- a/arch/arm/boot/dts/cros5250-common.dtsi
+++ b/arch/arm/boot/dts/cros5250-common.dtsi
@@ -48,7 +48,7 @@
 			samsung,pin-pud = <0>;
 		};
 
-		cyapa_irq: cyapa-irq {
+		trackpad_irq: trackpad-irq {
 			samsung,pins = "gpx1-2";
 			samsung,pin-function = <0>;
 			samsung,pin-pud = <0>;
@@ -343,13 +343,34 @@
 		samsung,i2c-sda-delay = <100>;
 		samsung,i2c-max-bus-freq = <378000>;
 
+		/*
+		 * TODO: for now config the IRQ at the i2c level since
+		 * pinctrl can't handle sharing it between two children, even
+		 * if one fails to probe.
+		 * See crosbug.com/p/20329
+		 */
+		pinctrl-names = "default";
+		pinctrl-0 = <&i2c1_bus &trackpad_irq>;
+
 		trackpad {
 			reg = <0x67>;
 			compatible = "cypress,cyapa";
 			interrupts = <2 0>;
 			interrupt-parent = <&gpx1>;
-			pinctrl-names = "default";
-			pinctrl-0 = <&cyapa_irq>;
+			wakeup-source;
+		};
+		trackpad-alt {
+			reg = <0x4b>;
+			compatible = "atmel,atmel_mxt_tp";
+			interrupts = <2 0>;
+			interrupt-parent = <&gpx1>;
+			wakeup-source;
+		};
+		trackpad-bootloader {
+			reg = <0x25>;
+			compatible = "atmel,atmel_mxt_tp";
+			interrupts = <2 0>;
+			interrupt-parent = <&gpx1>;
 			wakeup-source;
 		};
 	};
