ARM: dts: Enable Atmel trackpad for all cros5250 devices
The exynos5250-spring device tree already effectively had both cyapa
and atmel touchpads defined.  Since we'd now like both defined for
exynos5250-snow, move the definition up to the cros5250-common device
tree file.  This allows snow to work with _either_ the cyapa or atmel
touch pad dynamically.

BUG=chrome-os-partner:22732
TEST=Boot and check cursor on original snow, snow1.2(x16), snow2.0(cob)

Change-Id: I2efd5d9caab7abf88135590d34ac2f9137cea90e
Signed-off-by: Wonjoon Lee <woojoo.lee@samsung.com>
Signed-off-by: Doug Anderson <dianders@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/171371
Reviewed-by: Todd Broch <tbroch@chromium.org>
Tested-by: Todd Broch <tbroch@chromium.org>

--- a/arch/arm/boot/dts/cros5250-common.dtsi
+++ b/arch/arm/boot/dts/cros5250-common.dtsi
@@ -233,6 +233,20 @@
 			interrupt-parent = <&wakeup_eint>;
 			wakeup-source;
 		};
+		trackpad-alt {
+			reg=<0x4b>;
+			compatible="atmel,atmel_mxt_tp";
+			interrupts=<10 0>;
+			interrupt-parent=<&wakeup_eint>;
+			wakeup-source;
+		};
+		trackpad-bootloader {
+			reg=<0x25>;
+			compatible="atmel,atmel_mxt_tp";
+			interrupts=<10 0>;
+			interrupt-parent=<&wakeup_eint>;
+			wakeup-source;
+		};
 	};
 
 	i2c@12C80000 {
