ARM: dts: exynos5420: add tmu_apbif_triminfo clocks
The CPU TMUs and the GPU TMU use different gate clocks on Exynos5420,
so add the required gate clocks to the TMU nodes which have misplaced
TRIMINFO registers on TMUs using a different gate clock.

BUG=chrome-os-partner:22774
TEST=Observe that the TRIMINFO_25 value is different for the GPU's
TMU before and after this change.  On my MP6 Pit it previously read
0 (resulting in abnormally high temperature readings), but now reads
56.

Change-Id: I0bf319f248f5420078f0d3b5d0323a159175ece5
Signed-off-by: Andrew Bresticker <abrestic@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/171653
Reviewed-by: Doug Anderson <dianders@chromium.org>

--- a/arch/arm/boot/dts/exynos5420.dtsi
+++ b/arch/arm/boot/dts/exynos5420.dtsi
@@ -284,8 +284,8 @@
 		/* 2nd reg is for the misplaced TRIMINFO register */
 		reg = <0x1006c000 0x100>, <0x100a0000 0x4>;
 		interrupts = <0 185 0>;
-		clocks = <&clock 318>;
-		clock-names = "tmu_apbif";
+		clocks = <&clock 318>, <&clock 319>;
+		clock-names = "tmu_apbif", "tmu_apbif_triminfo";
 	};
 
 	/* tmu for GPU */
@@ -294,8 +294,8 @@
 		/* 2nd reg is for the misplaced TRIMINFO register */
 		reg = <0x100a0000 0x100>, <0x10068000 0x4>;
 		interrupts = <0 215 0>;
-		clocks = <&clock 319>;
-		clock-names = "tmu_apbif";
+		clocks = <&clock 319>, <&clock 318>;
+		clock-names = "tmu_apbif", "tmu_apbif_triminfo";
 	};
 
 	serial@12C00000 {
