ARM: dts: exynos5250: add MFC clocks
Add gate clocks for the MFC block and its SysMMUs.

BUG=chrome-os-partner:23164
TEST=MFC now probes and starts up successfully.  Once GSCL clocks
are added, play video and observe that the MFC is gated/umgated
independent of the MFC SysMMUs.

Change-Id: I37e8612e4c56c82aff452a311820743b3a7294fc
Signed-off-by: Andrew Bresticker <abrestic@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/172204
Reviewed-by: Arun Kumar <arunkk.samsung@gmail.com>
Reviewed-by: Rahul Sharma <r.sh.open@gmail.com>
Reviewed-by: Doug Anderson <dianders@chromium.org>

--- a/arch/arm/boot/dts/exynos5250.dtsi
+++ b/arch/arm/boot/dts/exynos5250.dtsi
@@ -172,6 +172,8 @@
 		compatible = "samsung,mfc-v6";
 		reg = <0x11000000 0x10000>;
 		interrupts = <0 96 0>;
+		clocks = <&clock 266>;
+		clock-names = "mfc";
 		samsung,power-domain = <&mfc_pd>;
 	};
 
@@ -770,6 +772,8 @@
 		interrupt-parent = <&combiner>;
 		interrupts = <8 5>;
 		mmu-master = <&mfc>;
+		clocks = <&clock 267>, <&clock 266>;
+		clock-names = "sysmmu", "master";
 		samsung,power-domain = <&mfc_pd>;
 	};
 
@@ -780,6 +784,8 @@
 		interrupt-parent = <&combiner>;
 		interrupts = <6 2>;
 		mmu-master = <&mfc>;
+		clocks = <&clock 268>, <&clock 266>;
+		clock-names = "sysmmu", "master";
 		samsung,power-domain = <&mfc_pd>;
 	};
 
