ARM: dts: exynos5250: add MFC/GSC PM domain clocks
Add the necessary clocks to the MFC and GSC power domains so that
aclk333, aclk266_gscl, and aclk300_gscl are correctly parented when
powering on/off the power domain.

BUG=chrome-os-partner:22253,chrome-os-partner:23164
TEST=Run suspend/resume on Snow and see that there's no longer a
performance regression after resume.  Also check that SRC_TOP3 reads
0x1000550 whenever MFC and GSC are active, indicating that aclk333,
aclk266_gscl, and aclk300_gscl are not parented by fin_pll.

Change-Id: I6a9bae40f259e83cf0eed3297b6a5b50d2d150d0
Signed-off-by: Andrew Bresticker <abrestic@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/172208
Reviewed-by: Doug Anderson <dianders@chromium.org>

--- a/arch/arm/boot/dts/exynos5250.dtsi
+++ b/arch/arm/boot/dts/exynos5250.dtsi
@@ -686,11 +686,16 @@
 	gsc_pd: pd@0x10044000 {
 		compatible = "samsung,exynos4210-pd";
 		reg = <0x10044000 0x20>;
+		clocks = <&clock 1>, <&clock 512>, <&clock 1027>,
+			<&clock 513>, <&clock 1028>;
+		clock-names = "oscclk", "pclk0", "clk0", "pclk1", "clk1";
 	};
 
 	mfc_pd: pd@0x10044040 {
 		compatible = "samsung,exynos4210-pd";
 		reg = <0x10044040 0x20>;
+		clocks = <&clock 1>, <&clock 514>, <&clock 1029>;
+		clock-names = "oscclk", "pclk0", "clk0";
 	};
 
 	gsc_0:  gsc@0x13e00000 {
