CHROMIUM: Instantiate cros-ec-charger for Spring.
Signed-off-by: Todd Broch <tbroch@chromium.org>

BUG=chrome-os-partner:21952
TEST=manual,

1. boot kernel, login as root
2. plug in various PSU's
3. check online status
   power_supply_info | grep online
   online:           yes
4. unplug PSU
   power_supply_info | grep online
   online:           no

Change-Id: I0575abf7bb0cceee26daf5cdc024906d22c266ff
Reviewed-on: https://chromium-review.googlesource.com/172515
Tested-by: Todd Broch <tbroch@chromium.org>
Reviewed-by: Olof Johansson <olofj@chromium.org>
Reviewed-by: Vincent Palatin <vpalatin@chromium.org>
Commit-Queue: David James <davidjames@chromium.org>

--- a/arch/arm/boot/dts/exynos5250-spring.dts
+++ b/arch/arm/boot/dts/exynos5250-spring.dts
@@ -541,10 +541,10 @@
 						regulator-max-microvolt = <5000000>;
 					};
 				};
+			};
 
-				charger {
-					compatible = "ti,cros_ec-charger";
-				};
+			charger {
+				compatible = "ti,cros-ec-charger";
 			};
 
 			/* Arbitrarily assign bus 20 since past exynos range */
