CHROMIUM: power,mkbp: Update PSU status via EC's MKBP.
EC has only one interrupt to the AP which is used to
signal keyboard input has arrived.

In order to signal change in power supply unit status (PSU) without
complicating and slowing keyboard response, we've added a virtual
keystroke, KEY_BATTERY, to signal change in PSU state.

Signed-off-by: Todd Broch <tbroch@chromium.org>

BUG=chrome-os-partner:17927, chrome-os-partner:21952
TEST=manual,

1. Plug-in AC supply, boot and login as root
2. Examine current PSU type
   cat /sys/class/power_supply/cros_ec-charger/type
   Mains
3. Unplug PSU, repeat 2. see same result
4. From EC console press 'BATTERY_KEY'
   kpbress 0 7 1
5. Re-examine PSU type
   cat /sys/class/power_supply/cros_ec-charger/type
   UNKNOWN

Repeat steps 1-5 for various PSUs

Original-Change-Id: Ie80f7ae45f8bb47dbad893eb87e5fb6df7a3e3cd
Reviewed-on: https://gerrit.chromium.org/gerrit/45074
Reviewed-by: Vincent Palatin <vpalatin@chromium.org>
Commit-Queue: Todd Broch <tbroch@chromium.org>
Tested-by: Todd Broch <tbroch@chromium.org>
(cherry-picked from commit 621f715560cbdb7429d017473b8f52c7d0dcbb72)

Change-Id: I491741475ec2208f8c99237eac52b17521b5f71d
Reviewed-on: https://chromium-review.googlesource.com/172516
Tested-by: Todd Broch <tbroch@chromium.org>
Reviewed-by: Vincent Palatin <vpalatin@chromium.org>
Commit-Queue: David James <davidjames@chromium.org>

--- a/arch/arm/boot/dts/exynos5250-spring.dts
+++ b/arch/arm/boot/dts/exynos5250-spring.dts
@@ -487,12 +487,12 @@
 					0x06040003 0x06050009 0x06060008 0x0608000b
 					/* 9       L_ALT      DOWN       RIGHT   */
 					0x0609000a 0x060a0038 0x060b006c 0x060c006a
-					/* Q       E          R          W       */
-					0x07010010 0x07020012 0x07030013 0x07040011
-					/* I       U          R_SHIFT    P       */
-					0x07050017 0x07060016 0x07070036 0x07080019
-					/* O       UP         LEFT     */
-					0x07090018 0x070b0067 0x070c0069>;
+					/* BATTERY Q          E          R        */
+					0x070000ec 0x07010010 0x07020012 0x07030013
+					/* W       I          U          R_SHIFT  */
+					0x07040011 0x07050017 0x07060016 0x07070036
+					/* P       O          UP         LEFT     */
+					0x07080019 0x07090018 0x070b0067 0x070c0069>;
 			};
 
 			power-regulator {
