ARM: dts: peach-pit: set initial mmc clock frequency
Instead of relying on the firmware to initialize sclk_mmc{0,2} to
reasonable frequencies, set "clock-frequency" for so that they are
set to known working frequencies.

BUG=chrome-os-partner:21741
TEST=Boot successfully from SD card and eMMC with a U-Boot initializing
sclk_mmc* to either 200Mhz and 400Mhz.  Previously booting from eMMC
with U-Boot initializaing sclk_mmc0 to 200Mhz would fail.

Change-Id: I05754ec552748190f6d0526522a003ec62befd5a
Signed-off-by: Andrew Bresticker <abrestic@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/172690
Reviewed-by: Sonny Rao <sonnyrao@chromium.org>
Reviewed-by: Doug Anderson <dianders@chromium.org>

--- a/arch/arm/boot/dts/exynos5420-peach-pit.dtsi
+++ b/arch/arm/boot/dts/exynos5420-peach-pit.dtsi
@@ -321,6 +321,7 @@
 		non-removable;
 		fifo-depth = <0x40>;
 		card-detect-delay = <200>;
+		clock-frequency = <400000000>;
 		samsung,dw-mshc-ciu-div = <3>;
 		samsung,dw-mshc-sdr-timing = <0 4>;
 		samsung,dw-mshc-ddr-timing = <0 2>;
@@ -367,6 +368,7 @@
 		supports-highspeed;
 		fifo-depth = <0x40>;
 		card-detect-delay = <200>;
+		clock-frequency = <400000000>;
 		samsung,dw-mshc-ciu-div = <3>;
 		samsung,dw-mshc-sdr-timing = <2 3>;
 		samsung,dw-mshc-ddr-timing = <1 2>;
