ARM: dts: exynos5250: add FIMD SysMMU clocks
Add gating and master clocks for the FIMD SysMMU.

BUG=chrome-os-partner:23164
TEST=Display comes up and suspend/resume still works on Snow.

Change-Id: Ia676dbe0cbb86f87c1bf00849c120c6cafe1469a
Signed-off-by: Andrew Bresticker <abrestic@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/172870
Reviewed-by: Doug Anderson <dianders@chromium.org>

--- a/arch/arm/boot/dts/exynos5250.dtsi
+++ b/arch/arm/boot/dts/exynos5250.dtsi
@@ -859,6 +859,8 @@
 		compatible = "samsung,exynos-sysmmu";
 		interrupt-parent = <&combiner>;
 		interrupts = <3 2>;
+		clocks = <&clock 348>, <&clock 339>;
+		clock-names = "sysmmu", "master";
 		mmu-master = <&fimd>;
 	};
 
