CHROMIUM: dts: mmc: update device tree for upstream handling of SMU
Upstream chose to handle the SMU (Security Management Unit) quirk by
adding a distinct type of dwmmc controller.  Since we've picked up the
upstream patch, we need to update our device tree for 5420 to reflect
that.  Without this wifi fails to initialize properly and we timeout
trying to load the firmware.  This patch also corrects the reg property
on the non-SMU capable instance of dwmmc.

BUG=chrome-os-partner:20212
TEST=peach-pit boots and wifi comes up properly

Change-Id: I110a2caad758d18a9fc90602d29813c1f7f80057
Signed-off-by: Sonny Rao <sonnyrao@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/173522

--- a/arch/arm/boot/dts/exynos5420.dtsi
+++ b/arch/arm/boot/dts/exynos5420.dtsi
@@ -516,7 +516,7 @@
 	};
 
 	dwmmc_0: dwmmc0@12200000 {
-		compatible = "samsung,exynos5420-dw-mshc";
+		compatible = "samsung,exynos5420-dw-mshc-smu";
 		reg = <0x12200000 0x2000>;
 		interrupts = <0 75 0>;
 		#address-cells = <1>;
@@ -527,7 +527,7 @@
 	};
 
 	dwmmc_1: dwmmc1@12210000 {
-		compatible = "samsung,exynos5420-dw-mshc";
+		compatible = "samsung,exynos5420-dw-mshc-smu";
 		reg = <0x12210000 0x2000>;
 		interrupts = <0 76 0>;
 		#address-cells = <1>;
@@ -539,7 +539,7 @@
 
 	dwmmc_2: dwmmc2@12220000 {
 		compatible = "samsung,exynos5420-dw-mshc";
-		reg = <0x12220000 0x2000>;
+		reg = <0x12220000 0x1000>;
 		interrupts = <0 77 0>;
 		#address-cells = <1>;
 		#size-cells = <0>;
