--- a/arch/arm/boot/dts/exynos542x-peach.dtsi
+++ b/arch/arm/boot/dts/exynos542x-peach.dtsi
@@ -301,6 +301,7 @@
 		bypass-smu;
 		supports-highspeed;
 		non-removable;
+		caps2-mmc-hs200-1_8v;
 		fifo-depth = <0x40>;
 		card-detect-delay = <200>;
 		clock-frequency = <400000000>;
