ARM: dts: peach-pit: run hsi2c-4 at 400khz in fs-mode
Since hs-mode seems to be slower than fs-mode, run hsi2c channel 4 at
400Khz in fs-mode instead of 1Mhz in hs-mode.

BUG=chrome-os-partner:21520
TEST=following test cases show transactions times:

localhost ~ # echo "exynos5_i2c_xfer" > /sys/kernel/debug/tracing/set_ftrace_filter
localhost ~ # echo "function_graph" > /sys/kernel/debug/tracing/current_tracer
localhost ~ # cat /sys/kernel/debug/tracing/trace_pipe
localhost ~ # echo userspace > /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor
localhost ~ # echo 300000 > /sys/devices/system/cpu/cpu0/cpufreq/scaling_setspeed
localhost ~ # echo 1800000 > /sys/devices/system/cpu/cpu0/cpufreq/scaling_setspeed

fs-mode at 400khz:

localhost cpufreq # cat /sys/kernel/debug/tracing/trace_pipe
0) ! 125.167 us  |  exynos5_i2c_xfer();
1) ! 156.750 us  |  exynos5_i2c_xfer();
1) ! 135.208 us  |  exynos5_i2c_xfer();
1) ! 194.583 us  |  exynos5_i2c_xfer();

hs-mode at 1Mhz:

localhost cpufreq # cat /sys/kernel/debug/tracing/trace_pipe
 1) ! 206.834 us  |  exynos5_i2c_xfer();
 1) ! 206.250 us  |  exynos5_i2c_xfer();
 1) ! 217.875 us  |  exynos5_i2c_xfer();

Change-Id: I4d379a647026122f70a916285131894430c653f8
Signed-off-by: Naveen Krishna Chatradhi <ch.naveen@samsung.com>
Signed-off-by: Andrew Bresticker <abrestic@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/174212
Reviewed-by: Doug Anderson <dianders@chromium.org>

--- a/arch/arm/boot/dts/exynos5420-peach-pit.dtsi
+++ b/arch/arm/boot/dts/exynos5420-peach-pit.dtsi
@@ -667,8 +667,7 @@
 	/* hsi2c4 */
 	hsi2c@12CA0000 {
 		status = "okay";
-		samsung,hs-mode;
-		clock-frequency = <1000000>;
+		clock-frequency = <400000>;
 
 		max77802-pmic@9 {
 			compatible = "maxim,max77802";
