--- a/arch/arm/boot/dts/exynos5420-peach-pit.dtsi
+++ b/arch/arm/boot/dts/exynos5420-peach-pit.dtsi
@@ -347,6 +347,7 @@
 		supports-sdr50-mode;
 		keep-power-in-suspend;
 		/* non-removable NOT set so mwifiex driver can use reset trick */
+		edge-triggered-interrupts;
 		broken-cd;
 		bypass-smu;
 		fifo-depth = <0x40>;
