CHROMIUM: arm: dts: add entry for wwan enable regulator
We need this to enable power to the WWAN card.  In kernel chromeos-3.4
this was in cros5250-common.dtsi but should only really be enabled on
snow.  This also adds the pinmux entry for this GPIO.

BUG=chromium:310367
TEST=boot snow with 3G card and run lsusb, see "1410:a021 Novatel
Wireless"

Change-Id: I8856267db8625d405c3a18f5df7fa901cbcdd0e1
Signed-off-by: Sonny Rao <sonnyrao@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/174395
Reviewed-by: Doug Anderson <dianders@chromium.org>
Reviewed-by: Vincent Palatin <vpalatin@chromium.org>

--- a/arch/arm/boot/dts/exynos5250-snow.dtsi
+++ b/arch/arm/boot/dts/exynos5250-snow.dtsi
@@ -98,6 +98,13 @@
 			samsung,pin-pud = <0>;
 			samsung,pin-drv = <0>;
 		};
+
+		wwan_en: wwan-en {
+			samsung,pins = "gpe0-0";
+			samsung,pin-function = <1>;
+			samsung,pin-pud = <0>;
+			samsung,pin-drv = <0>;
+		};
 	};
 
 	gpio-keys {
@@ -301,6 +308,17 @@
 
 		pinctrl-names = "default";
 		pinctrl-0 = <&sd3_clk &sd3_cmd &sd3_bus4>;
+	};
+
+	wwan-en {
+		compatible = "regulator-fixed";
+		regulator-name = "wwan-en";
+		gpio = <&gpe0 0 0>;
+		enable-active-high;
+		regulator-boot-on;
+		regulator-always-on;
+		pinctrl-names = "default";
+		pinctrl-0 = <&wwan_en>;
 	};
 
 	usb@12000000 {
