ARM: dts: exynos5250-snow: add backlight enable GPIO
Add the backlight enable GPIO to the PWM backlight node so that it is
requested and enabled when necessary.

BUG=chromium:308440
TEST=backlight comes up on boot and after resume on Snow.  Check that
/sys/kernel/debug/gpio reports that the GPIO is requested and enabled:
localhost ~ # cat /sys/kernel/debug/gpio |grep pwm
 gpio-156 (pwm-bl-en           ) out hi

Change-Id: Iac30c9e8c621541ca39a359c981d3b880a52c855
Signed-off-by: Andrew Bresticker <abrestic@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/174908
Reviewed-by: Grant Grundler <grundler@chromium.org>
Commit-Queue: Grant Grundler <grundler@chromium.org>
Tested-by: Grant Grundler <grundler@chromium.org>

--- a/arch/arm/boot/dts/exynos5250-snow.dtsi
+++ b/arch/arm/boot/dts/exynos5250-snow.dtsi
@@ -82,6 +82,13 @@
 			samsung,pin-pud = <0>;
 			samsung,pin-drv = <0>;
 		};
+
+		backlight_en: backlight-en {
+			samsung,pins = "gpx3-0";
+			samsung,pin-function = <1>;
+			samsung,pin-pud = <0>;
+			samsung,pin-drv = <0>;
+		};
 	};
 
 	pinctrl@13400000 {
@@ -383,7 +390,8 @@
 		pwms = <&pwm 0 1000000 0>;
 		max-brightness = <2800>;
 		default-brightness-level = <2800>;
-		pinctrl-0 = <&backlight_pwm>;
+		enable-gpio = <&gpx3 0 0>;
+		pinctrl-0 = <&backlight_pwm &backlight_en>;
 		pinctrl-names = "default";
 	};
 
