--- a/arch/arm/boot/dts/exynos542x-peach.dtsi
+++ b/arch/arm/boot/dts/exynos542x-peach.dtsi
@@ -748,6 +748,7 @@
 					regulator-name = "vdd_mifs";
 					regulator-min-microvolt = <900000>;
 					regulator-max-microvolt = <1300000>;
+					regulator-op-mode = <1>;
 					regulator-always-on;
 				};
 				ldo32_reg: LDO32 {
