ARM: dts: Update HDMI FET for daisy-rev5
The HDMI Power Rail moved from FET2 to FET7 in daisy-rev5.
That's why we have to modify device tree to handle this.
 - daisy rev4:  FET2 is used for HDMI
 - daisy rev5:  FET7 is used for HDMI

BUG=chrome-os-partner:23702
TEST=TEST HDMI on rev4 and rev5.
TEST=Manual:
 1. find /sys/kernel/debug/regulator/ | grep hdmi-en
 2. On rev4 see video_mid/14530000.hdmi-hdmi-en
 3. On rev5 see video_mid_1a/14530000.hdmi-hdmi-en

Change-Id: Ifb50622fbe45d9969981eee5e4d5eae8e6fcc2d7
Signed-off-by: Jaehoon kim <jh228.kim@samsung.com>
Signed-off-by: Doug Anderson <dianders@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/174973
Reviewed-by: Katie Roberts-Hoffman <katierh@chromium.org>

--- a/arch/arm/boot/dts/exynos5250-snow.dtsi
+++ b/arch/arm/boot/dts/exynos5250-snow.dtsi
@@ -279,8 +279,9 @@
 					fet6 {
 						regulator-name = "lcd_vdd";
 					};
-					fet7 {
-						regulator-name = "ts";
+					tps65090_fet7: fet7 {
+						regulator-name = "video_mid_1a";
+						regulator-always-on;
 					};
 					ldo1 {
 					};
@@ -378,7 +379,7 @@
 	};
 
 	hdmi {
-		hdmi-en-supply = <&tps65090_fet2>;
+		hdmi-en-supply = <&tps65090_fet7>;
 		vdd-supply = <&ldo8_reg>;
 		vdd_osc-supply = <&ldo10_reg>;
 		vdd_pll-supply = <&ldo8_reg>;
