--- a/arch/arm/boot/dts/exynos5250-snow.dtsi
+++ b/arch/arm/boot/dts/exynos5250-snow.dtsi
@@ -146,6 +146,7 @@
 	 * reduce EMI.
 	 */
 	dwmmc3@12230000 {
+		edge-triggered-interrupts;
 		slot0 {
 			gpios = <&gpc4 1 2 3 0>, <&gpc4 0 2 0 0>,
 				<&gpc4 3 2 3 0>, <&gpc4 4 2 3 0>,
