--- a/arch/arm/boot/dts/exynos5250-spring.dts
+++ b/arch/arm/boot/dts/exynos5250-spring.dts
@@ -59,6 +59,7 @@
 		card-detect-delay = <200>;
 		samsung,dw-mshc-sdr-timing = <2 3 3>;
 		samsung,dw-mshc-ddr-timing = <1 2 3>;
+		edge-triggered-interrupts;
 
 		slot0 {
 			bus-width = <4>;
