drm/exynos: add dt binding for panel dimensions
Create a new (mandatory) dt binding for specifying the LCD's physical
dimensions.

This field propagates all the way up to userspace, and can be seen, for
example, using xrandr.

Signed-off-by: Daniel Kurtz <djkurtz@chromium.org>

BUG=chromium:301430
TEST=Verify reported panel dimensions are 256mm x 144mm on
  daisy,daisy_spring,peach_pit
 localhost ~ # DISPLAY=:0 xrandr
 Screen 0: minimum 320 x 200, current 1366 x 768, maximum 4096 x 4096
 eDP-1 connected 1366x768+0+0 256mm x 144mm
    1366x768       60.0*+
 HDMI-1 disconnected

Change-Id: I25c2bdb133d7697e672c2359e419af9a8f0585fb
Reviewed-on: https://chromium-review.googlesource.com/177016
Reviewed-by: Sean Paul <seanpaul@chromium.org>
Reviewed-by: Daniel Kurtz <djkurtz@chromium.org>
Tested-by: Daniel Kurtz <djkurtz@chromium.org>
Commit-Queue: Daniel Kurtz <djkurtz@chromium.org>

--- a/arch/arm/boot/dts/exynos5420-smdk5420.dts
+++ b/arch/arm/boot/dts/exynos5420-smdk5420.dts
@@ -347,6 +347,7 @@
 	lcd_dp0: lcd_panel0 {
 		lcd-htiming = <80 48 32 2560>;
 		lcd-vtiming = <16 8 6 1600>;
+		lcd-dimensions = <256 144>;
 	};
 
 	display-port-controller {
