--- a/arch/arm/boot/dts/exynos5420-peach-pit.dtsi
+++ b/arch/arm/boot/dts/exynos5420-peach-pit.dtsi
@@ -1102,6 +1102,7 @@
 	lcd_dp0: lcd_panel0 {
 		lcd-htiming = <40 40 32 1366>;
 		lcd-vtiming = <10 12 6 768>;
+		lcd-dimensions = <256 144>;
 	};
 
 	display-port-controller {
